--- a/link.html
+++ b/link.html
@@ -8,7 +8,7 @@
 <body>
     <iframe src="./intex.html" frameborder="1" width="400" height="400"></iframe>
     <br>
-    <video src="">Click here for Video</video>
+    <a href="">Click here for Video</a>
     
 </body>
 </html>
