--- a/link.html
+++ b/link.html
@@ -8,7 +8,7 @@
 <body>
     <iframe src="./intex.html" frameborder="1" width="400" height="400"></iframe>
     <br>
-    <a href="">Click here for Video</a>
+    <a href="./video(A-3).mp4">Click here for Video</a>
     
 </body>
 </html>
